--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="avatar-card">
-        <div class="avatar" aria-label=""C:\Users\user\Downloads\profile.jpg""> </div>
+      <div class="avatar" aria-label=""profile.jpg""> </div>
         <div class="socials">
           <a class="btn" href="https://github.com/rakibul0026" target="_blank" rel="noopener">GitHub</a>
           <a class="btn" href="#" target="_blank" rel="noopener">LinkedIn</a>
