--- a/p/index.html
+++ b/p/index.html
@@ -1,1 +1,324 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MD Rakibul Hassan — Portfolio</title>
+  <meta name="description" content="Portfolio of MD Rakibul Hassan — CSE student, Robotics & IoT enthusiast, Campus Ambassador, and Project Developer." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#0b0f14;
+      --panel:#0f1520;
+      --text:#e8eef7;
+      --muted:#9db0c7;
+      --brand:#4cc9f0;
+      --brand-2:#a0e9ff;
+      --chip:#182232;
+      --card:#0f1624;
+      --border:rgba(255,255,255,0.08);
+      --shadow:0 10px 30px rgba(0,0,0,0.35);
+    }
+    @media (prefers-color-scheme: light){
+      :root{
+        --bg:#f7fafc; --panel:#ffffff; --text:#0b1220; --muted:#4a5568; --brand:#2563eb; --brand-2:#60a5fa; --chip:#eef2f7; --card:#ffffff; --border:rgba(2,6,23,0.08); --shadow:0 10px 30px rgba(2,6,23,0.08);
+      }
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text)}
+    a{color:var(--brand);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .container{max-width:1080px;margin:0 auto;padding:24px}
+    header.hero{display:grid;grid-template-columns:1.2fr .8fr;gap:32px;align-items:center;padding:32px;border-bottom:1px solid var(--border)}
+    .badge{display:inline-flex;align-items:center;gap:8px;background:linear-gradient(145deg,var(--chip),transparent);border:1px solid var(--border);padding:8px 12px;border-radius:999px;font-weight:600;color:var(--brand)}
+    .title{font-size:40px;line-height:1.1;margin:12px 0 8px}
+    .subtitle{font-size:18px;color:var(--muted);max-width:52ch}
+    .hero-actions{margin-top:16px;display:flex;gap:12px;flex-wrap:wrap}
+    .btn{border:1px solid var(--border);background:linear-gradient(180deg,var(--panel),var(--card));color:var(--text);padding:10px 14px;border-radius:12px;display:inline-flex;align-items:center;gap:10px;font-weight:600;box-shadow:var(--shadow)}
+    .btn.primary{background:linear-gradient(180deg,var(--brand),var(--brand-2));color:#001018}
+    .btn:active{transform:translateY(1px)}
+    .avatar-card{justify-self:end;background:radial-gradient(1200px 300px at 50% -20%, rgba(76,201,240,0.25), transparent), var(--card);border:1px solid var(--border);padding:24px;border-radius:20px;box-shadow:var(--shadow);text-align:center}
+    .avatar{width:160px;height:160px;border-radius:50%;border:3px solid var(--border);background:linear-gradient(135deg,#1f2a44,#0f1624);display:inline-block}
+    .socials{margin-top:16px;display:flex;justify-content:center;gap:12px;flex-wrap:wrap}
+    .grid{display:grid;gap:20px}
+    .grid.cards{grid-template-columns:repeat(12,1fr)}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow);padding:20px}
+    .card h3{margin:0 0 8px;font-size:18px}
+    .card p{margin:0;color:var(--muted)}
+    .chip{display:inline-flex;align-items:center;padding:8px 10px;border-radius:999px;background:var(--chip);border:1px solid var(--border);margin:6px 6px 0 0;font-size:14px}
+    section{padding:28px 32px}
+    section h2{font-size:22px;margin:0 0 16px}
+    .two-col{display:grid;grid-template-columns:1fr 1fr;gap:20px}
+    .timeline{display:grid;gap:14px}
+    .item{padding:14px;border:1px dashed var(--border);border-radius:12px;background:linear-gradient(180deg,transparent,rgba(255,255,255,0.02))}
+    .item strong{display:block}
+    .kpis{display:flex;gap:12px;flex-wrap:wrap;margin-top:10px}
+    .kpi{flex:1;min-width:160px;padding:12px 14px;border-radius:12px;background:var(--chip);border:1px solid var(--border)}
+    footer{padding:24px 32px;border-top:1px solid var(--border);display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:12px}
+    @media (max-width: 900px){
+      header.hero{grid-template-columns:1fr}
+      .avatar-card{justify-self:stretch}
+      .two-col{grid-template-columns:1fr}
+      .grid.cards{grid-template-columns:repeat(6,1fr)}
+    }
+    @media (max-width: 600px){
+      .title{font-size:34px}
+      .grid.cards{grid-template-columns:repeat(2,1fr)}
+    }
+    /* Print-friendly for PDF */
+    @media print{
+      .btn, .hero-actions, .socials a::after{display:none !important}
+      body{background:#fff;color:#000}
+      .card, .item{box-shadow:none}
+    }
+    /* Simple anchor offsets */
+    nav.sticky{position:sticky;top:0;background:rgba(11,15,20,0.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border);z-index:50}
+    nav.sticky .nav-inner{max-width:1080px;margin:0 auto;display:flex;gap:14px;align-items:center;padding:10px 24px}
+    nav a{padding:8px 10px;border-radius:10px}
+    nav a:hover{background:var(--chip)}
+  </style>
+</head>
+<body>
+  <nav class="sticky">
+    <div class="nav-inner">
+      <strong>MD Rakibul Hassan</strong>
+      <span style="flex:1"></span>
+      <a href="#about">About</a>
+      <a href="#education">Education</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#projects">Projects</a>
+      <a href="#certs">Certifications</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+
+  <div class="container">
+    <header class="hero" id="top">
+      <div>
+        <span class="badge">🚀 CSE Student • Robotics & IoT Enthusiast</span>
+        <h1 class="title">MD Rakibul Hassan</h1>
+        <p class="subtitle">Computer Science & Engineering student at CSTU (2022–2027). Campus Ambassador, event organizer, and builder of practical robotics, IoT, and Android projects. Passionate about learning, teaching, and community building.</p>
+        <div class="hero-actions">
+          <a class="btn primary" href="mailto:rakibulhassanratulkhan84@gmail.com">✉️ Email</a>
+          <a class="btn" href="tel:+8801989377269">📞 Call</a>
+          <a class="btn" href="https://github.com/rakibul0026" target="_blank" rel="noopener">💻 GitHub</a>
+          <a class="btn" href="#" id="printBtn">🖨️ Save as PDF</a>
+        </div>
+        <div class="kpis">
+      
+          <div class="kpi"><strong>3+ Years</strong><div class="muted">Robotics/IoT Practice</div></div>
+          <div class="kpi"><strong>15+ Certificates</strong><div class="muted">Programming & Security</div></div>
+        </div>
+      </div>
+      <div class="avatar-card">
+   <div class="avatar">
+  <img src="profile.jpg" alt="My Profile Picture" class="avatar">
+</div>
+        <div class="socials">
+          <a class="btn" href="https://github.com/rakibul0026" target="_blank" rel="noopener">GitHub</a>
+          <a class="btn" href="#" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="btn" href="#projects">Projects</a>
+        </div>
+        <p class="subtitle" style="margin-top:12px">📍 Chandpur, Bangladesh</p>
+      </div>
+    </header>
+
+    <section id="about">
+      <h2>About</h2>
+      <div class="two-col">
+        <div class="card">
+          <h3>Who I Am</h3>
+          <p>I'm a CSE student at Chandpur Science & Technology University (CSTU), deeply involved in robotics competitions and community events. I enjoy building embedded systems with Arduino/ESP32, crafting Android apps, and exploring AI for practical use-cases.</p>
+        </div>
+        <div class="card">
+          <h3>What I Do</h3>
+          <p>Campus ambassador for major tech Olympiads, organizer and technical volunteer at robotics events, and developer of hands-on projects—from PID line followers to Java-based apps and IoT dashboards.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="education">
+      <h2>Education</h2>
+      <div class="timeline">
+        <div class="item">
+          <strong>B.Sc. in Computer Science & Engineering (2022–2027)</strong>
+          <div>Chandpur Science and Technology University (CSTU)</div>
+          <div class="muted">Course highlight: Algorithm Design & Analysis (Spring 2025)</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <div class="card">
+        <div style="margin-bottom:8px"><strong>Programming</strong></div>
+        <span class="chip">C</span>
+        <span class="chip">C++</span>
+        <span class="chip">Java</span>
+        <span class="chip">Python</span>
+        <span class="chip">Arduino</span>
+        <span class="chip">MATLAB</span>
+      </div>
+      <div class="card" style="margin-top:12px">
+        <div style="margin-bottom:8px"><strong>Robotics & IoT</strong></div>
+        <span class="chip">Arduino UNO / Mega</span>
+        <span class="chip">ESP32</span>
+        <span class="chip">Raspberry Pi</span>
+        <span class="chip">PID Control</span>
+        <span class="chip">Sensors & Actuators</span>
+        <span class="chip">PCB Design</span>
+        <span class="chip">Tinkercad / Proteus / EasyEDA</span>
+      </div>
+      <div class="card" style="margin-top:12px">
+        <div style="margin-bottom:8px"><strong>Apps & Tools</strong></div>
+        <span class="chip">Android Studio</span>
+        <span class="chip">Firebase</span>
+        <span class="chip">Git & GitHub</span>
+        <span class="chip">Data Analysis</span>
+        <span class="chip">Cybersecurity Fundamentals</span>
+      </div>
+    </section>
+
+    <section id="experience">
+      <h2>Experience & Leadership</h2>
+      <div class="grid cards">
+        <div class="card" style="grid-column:span 6">
+                   <h3>Teacher</h3>
+          
+          <div class="experience-item">
+  <p class="muted">Tuition for classes 6–12</p>
+  <ul>
+<p>
+    Experienced in teaching Mathematics, Physics, and Computer Science.  
+    Skilled in time management and communication. Focused on helping students 
+    understand concepts clearly and improve their exam scores.  
+    Personalized lessons and doubt-solving sessions are available.
+</p>
+  </ul>
+</div>
+
+
+        </div>
+        <div class="card" style="grid-column:span 6">
+          <h3>Campus Ambassador</h3>
+          <p class="muted">5th International Robo Tech Olympiad 2025</p>
+          <p>Promoted participation, managed communications, and provided technical support.</p>
+        </div>
+        <div class="card" style="grid-column:span 6">
+          <h3>Campus Ambassador</h3>
+          <p class="muted">ICT Olympiad Bangladesh</p>
+          <p>Engaged students across departments; organized info sessions and prep circles.</p>
+        </div>
+        <div class="card" style="grid-column:span 6">
+          <h3>Campus Ambassador</h3>
+          <p class="muted">National Robotics Championship</p>
+          <p>Facilitated registrations, team coordination, and on-site tech assistance.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="grid cards">
+        <article class="card" style="grid-column:span 6">
+          <h3>Line Following Robot (PID Based)</h3>
+          <p>8-sensor Arduino UNO LFR with hybrid digital + PID control for smooth and fast tracking.</p>
+          <p class="muted">Tech: Arduino, IR sensors, PID tuning</p>
+        </article>
+        <article class="card" style="grid-column:span 6">
+          <h3>BMI Calculator – Android</h3>
+          <p>Simple, responsive BMI calculator app developed in Android Studio (Java).</p>
+          <p><a href="https://lnkd.in/ddPuvNYs" target="_blank" rel="noopener">View App Post</a></p>
+        </article>
+        <article class="card" style="grid-column:span 6">
+          <h3>Banking Application (Java OOP)</h3>
+          <p>Menu-driven console banking app demonstrating OOP concepts (encapsulation, inheritance, polymorphism).</p>
+          <p><a href="https://github.com/rakibul0026/Project-in-Java" target="_blank" rel="noopener">GitHub Repository</a></p>
+        </article>
+        <article class="card" style="grid-column:span 6">
+          <h3>Smart Agriculture IoT System</h3>
+          <p>ESP32 + DHT11 + Soil Moisture sensors feeding a Bluetooth app (MIT App Inventor) for live monitoring.</p>
+          <p class="muted">Tech: ESP32, Sensors, Bluetooth, App Inventor</p>
+        </article>
+      </div>
+    </section>
+
+    <section id="certs">
+      <h2>Certifications</h2>
+      <div class="grid cards">
+        <div class="card" style="grid-column:span 4">
+          <h3>Python for Everybody</h3>
+          <p class="muted">University of Michigan (Coursera)</p>
+        </div>
+        <div class="card" style="grid-column:span 4">
+          <h3>Introduction to Cybersecurity</h3>
+          <p class="muted">Cisco Networking Academy</p>
+        </div>
+        <div class="card" style="grid-column:span 4">
+          <h3>IoT Fundamentals</h3>
+          <p class="muted">Cisco</p>
+        </div>
+        <div class="card" style="grid-column:span 4">
+          <h3>Data Analysis with Python</h3>
+          <p class="muted">IBM SkillsBuild</p>
+        </div>
+        <div class="card" style="grid-column:span 4">
+          <h3>Arduino & Embedded Systems</h3>
+          <p class="muted">The Digital Adda</p>
+        </div>
+        <div class="card" style="grid-column:span 4">
+          <h3>Ethical Hacking Fundamentals</h3>
+          <p class="muted">LinkedIn Learning</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <div class="two-col">
+        <div class="card">
+          <p>📧 <a href="mailto:youremail@example.com">rakibulhassanratulkhan84@gmail.com</a></p>
+          <p>📱 <a href="tel:+8801XXXXXXXXX">+8801989377269</a></p>
+          <p>🔗 <a href="https://github.com/rakibul0026" target="_blank" rel="noopener">github.com/rakibul0026</a></p>
+          <p>🔗 <a href="#" target="_blank" rel="noopener">LinkedIn (add your link)</a></p>
+        </div>
+        <form class="card" onsubmit="event.preventDefault(); alert('Thanks! Your message was not actually sent in this static demo.');">
+          <h3>Send a Message</h3>
+          <label> Your Name<br><input required type="text" placeholder="Name" style="width:100%;padding:10px;border-radius:10px;border:1px solid var(--border);background:var(--panel);color:var(--text)"></label>
+          <br><br>
+          <label> Your Email<br><input required type="email" placeholder="email@example.com" style="width:100%;padding:10px;border-radius:10px;border:1px solid var(--border);background:var(--panel);color:var(--text)"></label>
+          <br><br>
+          <label> Message<br><textarea required rows="4" placeholder="Write your message..." style="width:100%;padding:10px;border-radius:10px;border:1px solid var(--border);background:var(--panel);color:var(--text)"></textarea></label>
+          <br>
+          <button class="btn primary" type="submit">Send</button>
+        </form>
+      </div>
+    </section>
+
+    <section id="extras">
+      <h2>Achievements & Activities</h2>
+      <ul class="item">
+        <li>Organized campus workshops on Arduino, IoT, and basic robotics.</li>
+        <li>Mentored juniors on PID tuning for line follower robots.</li>
+        <li>Volunteered as technical support in multiple robotics competitions.</li>
+      </ul>
+    </section>
+  </div>
+
+  <footer>
+    <div>© <span id="year"></span> MD Rakibul Hassan</div>
+    <div>
+      <a href="#top">Back to top ↑</a>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById('printBtn').addEventListener('click', () => window.print());
+  </script>
+</body>
+</html>
 
