--- a/p/index.html
+++ b/p/index.html
@@ -241,7 +241,7 @@
         <article class="card" style="grid-column:span 6">
           <h3>Smart Agriculture IoT System</h3>
           <p>ESP32 + DHT11 + Soil Moisture sensors feeding a Bluetooth app  for live monitoring.</p>
-          <p class="muted">Tech: ESP32, Sensors, Bluetooth, App Inventor</p>
+          <p class="muted">Tech: ESP32, Sensors, Bluetooth</p>
         </article>
       </div>
     </section>
@@ -283,7 +283,7 @@
           <p>📧 <a href="mailto:youremail@example.com">rakibulhassanratulkhan84@gmail.com</a></p>
           <p>📱 <a href="tel:+8801XXXXXXXXX">+8801989377269</a></p>
           <p>🔗 <a href="https://github.com/rakibul0026" target="_blank" rel="noopener">github.com/rakibul0026</a></p>
-          <p>🔗 <a href="https://www.linkedin.com/in/md-rakibul-hassan-3b21aa318/" target="_blank" rel="noopener">https://www.linkedin.com/in/md-rakibul-hassan-3b21aa318/</a></p>
+     <p>🔗 <a href="https://www.linkedin.com/in/md-rakibul-hassan-3b21aa318/" target="_blank" rel="noopener">linkedin.com/in/md-rakibul-hassan-3b21aa318/</a></p>
         </div>
         <form class="card" onsubmit="event.preventDefault(); alert('Thanks! Your message was not actually sent in this static demo.');">
           <h3>Send a Message</h3>
