--- a/index.html
+++ b/index.html
@@ -220,31 +220,31 @@
       </div>
     </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <div class="grid cards">
-        <article class="card" style="grid-column:span 6">
-          <h3>Line Following Robot (PID Based)</h3>
-          <p>8-sensor Arduino UNO LFR with hybrid digital + PID control for smooth and fast tracking.</p>
-          <p class="muted">Tech: Arduino, IR sensors, PID tuning</p>
-        </article>
-        <article class="card" style="grid-column:span 6">
-          <h3>BMI Calculator – Android</h3>
-          <p>Simple, responsive BMI calculator app developed in Android Studio (Java).</p>
-          <p><a href="https://lnkd.in/ddPuvNYs" target="_blank" rel="noopener">View App Post</a></p>
-        </article>
-        <article class="card" style="grid-column:span 6">
-          <h3>Banking Application (Java OOP)</h3>
-          <p>Menu-driven console banking app demonstrating OOP concepts (encapsulation, inheritance, polymorphism).</p>
-          <p><a href="https://github.com/rakibul0026/Project-in-Java" target="_blank" rel="noopener">GitHub Repository</a></p>
-        </article>
-        <article class="card" style="grid-column:span 6">
-          <h3>Smart Agriculture IoT System</h3>
-          <p>ESP32 + DHT11 + Soil Moisture sensors feeding a Bluetooth app (MIT App Inventor) for live monitoring.</p>
-          <p class="muted">Tech: ESP32, Sensors, Bluetooth, App Inventor</p>
-        </article>
-      </div>
-    </section>
+   <section id="projects">
+  <h2>Projects</h2>
+  <div class="grid cards">
+    <article class="card" style="grid-column:span 6">
+      <h3>Line Following Robot (PID Based)</h3>
+      <p>8-sensor Arduino UNO LFR with hybrid digital + PID control for smooth and fast tracking.</p>
+      <p class="muted">Tech: Arduino, IR sensors, PID tuning</p>
+    </article>
+    <article class="card" style="grid-column:span 6">
+      <h3>BMI Calculator – Android</h3>
+      <p>Simple, responsive BMI calculator app developed in Android Studio (Java).</p>
+      <p><a href="https://lnkd.in/ddPuvNYs" target="_blank" rel="noopener">View App Post</a></p>
+    </article>
+    <article class="card" style="grid-column:span 6">
+      <h3>Banking Application (Java OOP)</h3>
+      <p>Menu-driven console banking app demonstrating OOP concepts (encapsulation, inheritance, polymorphism).</p>
+      <p><a href="https://github.com/rakibul0026/Project-in-Java" target="_blank" rel="noopener">GitHub Repository</a></p>
+    </article>
+    <article class="card" style="grid-column:span 6">
+      <h3>Asteroid Effect Simulation — NASA App Challenge</h3>
+      <p>A physics-based simulation that visualizes the impact effects of asteroids on Earth using data-driven models.</p>
+      <p class="muted">Tech: Python, Pygame, NASA APIs, Data Visualization</p>
+    </article>
+  </div>
+</section>
 
     <section id="certs">
       <h2>Certifications</h2>
