--- a/index.html
+++ b/index.html
@@ -246,35 +246,63 @@
   </div>
 </section>
 
-    <section id="certs">
-      <h2>Certifications</h2>
-      <div class="grid cards">
-        <div class="card" style="grid-column:span 4">
-          <h3>Python for Everybody</h3>
-          <p class="muted">University of Michigan (Coursera)</p>
-        </div>
-        <div class="card" style="grid-column:span 4">
-          <h3>Introduction to Cybersecurity</h3>
-          <p class="muted">Cisco Networking Academy</p>
-        </div>
-        <div class="card" style="grid-column:span 4">
-          <h3>IoT Fundamentals</h3>
-          <p class="muted">Cisco</p>
-        </div>
-        <div class="card" style="grid-column:span 4">
-          <h3>Data Analysis with Python</h3>
-          <p class="muted">IBM SkillsBuild</p>
-        </div>
-        <div class="card" style="grid-column:span 4">
-          <h3>Arduino & Embedded Systems</h3>
-          <p class="muted">The Digital Adda</p>
-        </div>
-        <div class="card" style="grid-column:span 4">
-          <h3>Ethical Hacking Fundamentals</h3>
-          <p class="muted">LinkedIn Learning</p>
-        </div>
-      </div>
-    </section>
+   <section id="certs">
+  <h2>Certifications</h2>
+  <div class="grid cards">
+    
+    <div class="card" style="grid-column:span 4">
+      <h3>NASA International Space Apps Challenge</h3>
+      <p class="muted">Issued Aug 2025 · Expired Oct 2025</p>
+      <p>Skills: Web Development · Web Services API · Team Leadership · Video Editing · Web Applications · Presentation Skills</p>
+      <p><a href="NASA CERTIFICATE.pdf" target="_blank" rel="noopener">View Certificate (PDF)</a></p>
+    </div>
+
+    <div class="card" style="grid-column:span 4">
+      <h3>Robotic Engineering</h3>
+      <p class="muted">MuktoPaath · Issued Feb 2025 · Expired Mar 2025</p>
+      <p>Credential ID: MC-N1L9090166Z1153W</p>
+      <p>Skills: Arduino IDE · Robotics · Arduino</p>
+      <p><a href="certificate20250318170313.pdf" target="_blank" rel="noopener">View Certificate (PDF)</a></p>
+    </div>
+
+    <div class="card" style="grid-column:span 4">
+      <h3>Industrial Internet of Things (IIoT)</h3>
+      <p class="muted">University of Michigan · Issued Nov 2024 · Expired Dec 2024</p>
+      <p>Credential ID: ZZSMLN0J9GT3</p>
+      <p><a href="Coursera ZZSMLN0J9GT3.pdf" target="_blank" rel="noopener">View Certificate (PDF)</a></p>
+    </div>
+
+    <div class="card" style="grid-column:span 4">
+      <h3>Career Essentials in Cybersecurity</h3>
+      <p class="muted">Microsoft & LinkedIn · Issued Aug 2024 · Expired Oct 2024</p>
+      <p>Skills: Threat & Vulnerability Management</p>
+      <p><a href="CertificateOfCompletion_Career Essentials in Cybersecurity by Microsoft and LinkedIn.pdf" target="_blank" rel="noopener">View Certificate (PDF)</a></p>
+    </div>
+
+    <div class="card" style="grid-column:span 4">
+      <h3>Ethical Hacking for Beginners</h3>
+      <p class="muted">Udemy · Issued Aug 2024 · Expired Oct 2024</p>
+      <p>Credential ID: UC-b4263f8b-402c-4ae7-9972-1cb9c93432d9</p>
+      <p><a href="Ethical Hacking.pdf" target="_blank" rel="noopener">View Certificate (PDF)</a></p>
+    </div>
+
+    <div class="card" style="grid-column:span 4">
+      <h3>Introduction to IoT</h3>
+      <p class="muted">Cisco Networking Academy · Issued Aug 2024 · Expired Sep 2024</p>
+      <p>Credential ID: 3b21aa318</p>
+      <p><a href="Introduction_to_IoT_Badge20240827-7-1y24x1.pdf" target="_blank" rel="noopener">View Certificate (PDF)</a></p>
+    </div>
+
+    <div class="card" style="grid-column:span 4">
+      <h3>Introduction to Python Programming</h3>
+      <p class="muted">Bohubrihi · Issued Aug 2024 · Expired Sep 2024</p>
+      <p>Credential ID: 66afe8c0d3dc0409bd115b97</p>
+      <p>Skills: Python (Programming Language)</p>
+      <p><a href="Introduction to Python Programming certificate.pdf" target="_blank" rel="noopener">View Certificate (PDF)</a></p>
+    </div>
+
+  </div>
+</section>
 
     <section id="contact">
       <h2>Contact</h2>
